[package]
name = "sunshine_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indradb-lib = { version = "2" }
serde_json = "1.0.68"
uuid = { version = "0.8", features = ["v4"] }
thiserror = "1.0.30"
async-trait = "0.1.51"
reqwest = { version = "0.11", features = ["json"] }
