[package]
name = "sunshine_dgraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
lazy_static = "1.4.0"
uuid = { version = "0.8", features = ["v4"] }
async-trait = "0.1.51"
sunshine_core = { path = "../sunshine_core" }