[package]
name = "sunshine_local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
serde_json = "1.0.68"
reqwest = { version = "0.11", features = ["json"] }
sunshine_core = { path="../sunshine_core" }
sunshine_indra = { path="../sunshine_indra" }

sunshine_solana = { path="../sunshine_solana" }
