[package]
name = "sunshine_solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.8.4"
solana-client = "1.8.4"
tiny-bip39 = "0.8.2"
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
spl-memo = { version = "3.0.1", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.0.3", features = [ "no-entrypoint" ] }
thiserror = "1.0.30"
dashmap = "4.0.2"
serde = { version = "1.0.130", features = [ "derive" ] }
tokio = { version = "1.14.0", features = ["full"] }
serde_json = "1.0.68"
pathfinding = "2.2.2"
futures = "0.3.18"
maplit = "1.0.2"
either = { version = "1.6.1", features = [ "serde" ] }
uuid = { version = "0.8", features = ["v4"] }
parse-display = "0.5.3"

sunshine_core = { path = "../sunshine_core" }
sunshine_indra = { path = "../sunshine_indra" }
