[package]
name = "sunshine_solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "=1.9.9"
solana-client = "=1.9.9"
tiny-bip39 = "0.8.2"
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
spl-memo = { version = "3.0.1", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.0.3", features = [ "no-entrypoint" ] }
thiserror = "1.0.30"
dashmap = "5.2.0"
serde = { version = "1.0.130", features = [ "derive" ] }
tokio = { version = "1.14.0", features = ["full"] }
serde_json = "1.0.68"
pathfinding = "2.2.2"
futures = "0.3.18"
maplit = "1.0.2"
either = { version = "1.6.1", features = [ "serde" ] }
uuid = { version = "0.8", features = ["v4"] }
parse-display = "0.5.3"
mpl-token-metadata = "1.2.5"
borsh = "0.9.1"
chrono = "0.4.19"
reqwest = { version = "0.11.9", features = [ "multipart" ] }
base64 = "0.13.0"
arloader = "0.1.61"
jsonwebkey = "0.3.4"
ring = "0.16.20"
url = "2.2.2"
rand = "0.8.5"
#zstd-safe = "4.1.4"
#indradb = "2.2.0"
#zstd-sys = "1.4.17+zstd.1.4.5"
derive_more = "0.99.17"
tempfile = "3.3.0"
bundlr-sdk = { git = "https://github.com/Bundlr-Network/rust-sdk", features = [ "solana" ] }
mime_guess = "2.0.4"
mpl-auction-house = "1.1.2"
anchor-lang = "0.20.1"

sunshine_core = { path = "../sunshine_core" }
sunshine_indra = { path = "../sunshine_indra" }

#[dependencies.solana-client]
#git = "https://github.com/solana-labs/solana/"
#rev = "2b0f16e7c378c14c8320b194d0963836343e52d2"
